--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="say">四年多来我们也经历了很多，也成长了很多，</span><br>
                     <span class="say">感谢你的陪伴，你的不离不弃。</span><br>
                     <span class="say">这次520本来准备去沈阳陪你，</span><br>
-                     <span class="say">可因为疫情我们不得异地相处。</span><br>
+                     <span class="say">可因为疫情我们不得不异地相处。</span><br>
                     <span class="say">我不在你身边一定要照顾好自己，</span><br>
                     <span class="say">按时吃饭，早点休息，注意防护，注意身体。</span><br>
                     <span class="say">这次本来也是精挑细选了礼物准备送给你，</span><br>
